legacy/1.0/kubernetes/applications/fasten/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasten-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &fastenHost fasten.mcmumf.dev
      secretName: fasten-cert
  rules:
    - host: *fastenHost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fasten-svc
                port:
                  number: 8080
